fixed font weight and spacing for h1

--- a/src/stylesheets/blocks/_header.scss
+++ b/src/stylesheets/blocks/_header.scss
@@ -73,7 +73,8 @@
 .header__title {
   font-family: 'Geomanist Medium';
   font-size: rem(11);
-  letter-spacing: rem(1.5);
+  font-weight: lighter;
+  letter-spacing: rem(2.5);
   text-transform: uppercase;
   color: color(emerald-green);
   margin: 0;
